--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
     <!-- fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700;800;900&family=Nunito+Sans:wght@200;300;400;600;700;800;900&display=swap" rel="stylesheet">
     <!-- normalize css -->
-    <link rel = "stylesheet" href = "css/normalize.css">
+    <link rel = "stylesheet" href = "styles/normalize.css">
     <!-- font awesome cdn -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- slick slider css -->
     <link rel = "stylesheet" href = "plugins/slick-1.8.1/slick/slick.css">
     <link rel = "stylesheet" href = "plugins/slick-1.8.1/slick/slick-theme.css">
     <!-- custom css -->
-    <link rel = "stylesheet" href = "css/utilities.css">
-    <link rel = "stylesheet" href = "css/main.css">
+    <link rel = "stylesheet" href = "styles/utilities.css">
+    <link rel = "stylesheet" href = "styles/main.css">
 
 </head>
 <body>
